--- a/css/style.css
+++ b/css/style.css
@@ -4,5 +4,36 @@
     box-sizing:border-box;
 }
 .container{
+    max-width:1200px;
     font-family: "Fredoka";sans-serif;
+    margin:0 auto;
+    text-align:center;
+}
+h1{
+    color:rgb(206, 48, 206);
+}
+.card{
+    float:left;
+    width:calc(100% /3- 10px);
+    background-color: black;
+    text-align: center;
+    margin:0 5px;
+}
+img{float:left;
+    height:100px;
+}
+h3,h5{
+    color:white;
+}
+.clearfix::after{
+    content:"";
+    display:table;
+    clear:both;
+}
+.white{
+    color:white;
+}
+a{
+    text-decoration: none;
+    color:lightblue;
 }
