--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,11 @@ h1{
 }
 .card{
     float:left;
-    width:calc(100% /3- 10px);
+    width:300px;
+    height:100px;
     background-color: black;
     text-align: center;
-    margin:0 5px;
+    margin:5px;
 }
 img{float:left;
     height:100px;
