--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ h1{
     width:300px;
     height:100px;
     background-color: black;
-    text-align: center;
     margin:5px;
 }
 img{float:left;
@@ -37,4 +36,8 @@ h3,h5{
 a{
     text-decoration: none;
     color:lightblue;
+}
+.all-cards{
+    float:left;
+    width:calc(100%/3);
 }
