--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
     max-width:1200px;
     font-family: "Fredoka";sans-serif;
     margin:0 auto;
-  
 }
 h1{
     color:rgb(206, 48, 206);
@@ -22,23 +21,33 @@ h1{
 img{float:left;
     height:100px;
 }
-h3,h5{
-    color:white;
-}
+
 .clearfix::after{
     content:"";
     display:table;
     clear:both;
 }
-.white{
-    color:white;
-}
-a , ul{
-    text-decoration: none;
+a { 
+    text-decoration:none;
     color:lightblue;
+    font-size:small;
+}
+h3,h5{
+    text-align:left;
+}
+h5{
+    font-weight:lighter;
 }
 .column{
     width:calc(100% / 3- 150px);
     margin:0 75px;
     padding-top:30px;
+}
+.testo{
+    color:white;
+    text-align:left;
+    padding:20px 5px;
+}
+.margin-image{
+    margin-right:5px;
 }
